  ! as soon as the next release of GnuCash is out (2.0.0)                !
  ------------------------------------------------------------------------

  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------

2006/05/23: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- src/storage: 
  - now logs creation of new objects
  - introduced lockCount for object locks thus allowing one client to have
    multiple locks on a given object
- src/storage.c: fixed a bug


2006/05/22: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- improved idmap code: now iterates over const idmaps (i.e. the argument
  *pid to the function GWEN_IdMap_FindNext() is now used as attach point
  instead of an internally stored var). This also allows for multiple
  iterations in parallel


2006-05-22   Christian Stimming <stimming@tuhh.de>

	* src/: Add include file ifdefs, which might be necessary on some
	windows (MSVC) platforms.


2006/05/20: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function pr##_IdMap_freeAll() to GWEN_IDMAP macros which e.g. expands
  to GWEN_Buffer_IdMap_freeAll() for
  "GWEN_IDMAP_FUNCTION_DEFS(GWEN_BUFFER, GWEN_Buffer)".
  This function frees all objects stored in the GWEN_IDMAP and frees the 
  GWEN_IDMAP itself.
- added function pr##_IdMap_FreeItems() to GWEN_IDMAP macros which e.g. 
  expands to GWEN_Buffer_IdMap_FreeItems() for
  "GWEN_IDMAP_FUNCTION_DEFS(GWEN_BUFFER, GWEN_Buffer)".
  This function frees all objects stored in the GWEN_IDMAP and clears the 
  GWEN_IDMAP (e.g. make it contain no ids afterwards).
- src/storage: added argument "reason" to GWEN_StoStorage_UnregisterClient(),
  which is now logged in the new log messages beginSession and endSession